--- a/assets/scss/blocks/_blocks.scss
+++ b/assets/scss/blocks/_blocks.scss
@@ -1,3 +1,10 @@
 @import "./header";
 @import "./hero";
+@import "./our";
+@import "./gran";
+@import "./piccollo";
+@import "./planalto";
+@import "./item";
+@import "./works";
+@import "./info";
 @import "./footer";
