--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@
   margin: 0 auto;
 }
 
-ul li {
+ol, ul {
   list-style: none;
 }
 
@@ -330,4 +330,575 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+.header {
+  width: 100%;
+  height: 70px;
+  background: url(..//..//images/header_fon.png) no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+.header .header_wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.header .header_list {
+  display: flex;
+  gap: 40px;
+}
+.header li a {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+main {
+  width: 100%;
+  height: 695px;
+  background: url(..//..//images/header_fon.png) no-repeat;
+  background-size: cover;
+}
+main .hero_left_right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .hero_title {
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 64px;
+  font-weight: 700;
+}
+main .hero_suptitle {
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  width: 464px;
+  padding-top: 24px;
+}
+main .hero_btn {
+  width: 193px;
+  height: 51px;
+  border-radius: 100px;
+  border: none;
+  background: rgb(10, 119, 95);
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-top: 34px;
+}
+
+main .our_left_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 80px;
+}
+main .main_title {
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+  padding-top: 50px;
+}
+main .our_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .our_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 34px;
+  width: 453px;
+  padding-top: 10px;
+}
+
+main .gran_left_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .gran_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .gran_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 34px;
+  width: 390px;
+  padding-top: 10px;
+}
+
+main .picollo_left_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .picollo_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .picollo_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 34px;
+  width: 390px;
+  padding-top: 10px;
+}
+
+main .planalto_left_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .planalto_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 48px;
+  font-weight: 500;
+}
+main .planalto_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 34px;
+  width: 410px;
+  padding-top: 10px;
+}
+main .planalto_img {
+  width: 450px;
+}
+
+main .item {
+  width: 100%;
+  height: 700px;
+  background: url(..//..//images/item_fon.png) no-repeat;
+  background-size: cover;
+  margin-top: 40px;
+}
+main .item_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .item_titlee {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 700;
+  padding-top: 50px;
+}
+main .item_suptitlee {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: center;
+  padding-top: 10px;
+}
+main .item_list {
+  display: flex;
+  gap: 20px;
+  padding-top: 80px;
+}
+main .item_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: 500;
+  padding-top: 28px;
+}
+main .item_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  width: 377px;
+  padding-top: 10px;
+}
+
+main .works {
+  width: 100%;
+  height: 826px;
+  margin-top: 300px;
+  background: url(..//..//images/works_fon.png) no-repeat center;
+  background-size: cover;
+}
+main .works__title {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 59px;
+  text-align: center;
+  padding-top: 50px;
+}
+main .works_box {
+  display: flex;
+  gap: 393px;
+  margin-top: 100px;
+  border-top: 3px dashed rgb(201, 155, 103);
+  width: 965px;
+}
+main .works__box {
+  width: 60px;
+  height: 60px;
+  border: 4px solid rgb(201, 155, 103);
+  background: rgb(248, 248, 242);
+  margin-top: -35px;
+}
+main .works__wrapper {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+main .works__wrapper li {
+  width: 433px;
+  height: 396px;
+  background: rgb(248, 248, 242);
+}
+main .works__wrapper__number {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 75px;
+  padding-top: 20px;
+  padding-left: 348px;
+}
+main .works__wrapper__title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 47px;
+  margin-top: 70px;
+  padding-left: 20px;
+}
+main .works__wrapper__suptitle {
+  margin-left: 20px;
+  color: rgb(51, 51, 51);
+  margin-top: 10px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+main .works__btn {
+  margin-top: 76px;
+  width: 193px;
+  height: 51px;
+  border-radius: 100px;
+  border: none;
+  background: rgb(201, 155, 103);
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  transition: 0.6s linear;
+}
+main .works__btn:hover {
+  background-color: aliceblue;
+  color: black;
+}
+
+main .info {
+  width: 100%;
+  height: 1167px;
+  background: url(..//..//images/our_fon.png);
+  margin-top: 20px;
+}
+main .info_left_right {
+  display: flex;
+  gap: 370px;
+}
+main .info_list {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+main .info_list_title {
+  color: rgb(0, 0, 0);
+}
+main .info_list {
+  padding-top: 50px;
+}
+main li a {
+  color: rgb(85, 85, 85);
+  font-family: Roboto;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 33px;
+}
+main .span {
+  padding-left: 94px;
+}
+main .info_item {
+  display: flex;
+  gap: 20px;
+}
+main .info_item_list {
+  width: 205.92px;
+  height: 220px;
+  background: rgba(10, 119, 95, 0.493);
+  opacity: 0.2;
+  margin-top: 20px;
+  transition: 0.3s linear;
+}
+main .info_item_list:hover {
+  width: 205.92px;
+  height: 220px;
+  background: rgba(10, 119, 95, 0.493);
+  opacity: 1;
+}
+main .info_item_list:hover .info_item_title {
+  color: white;
+}
+main .info_item_list:hover .info_item_suptitle {
+  color: white;
+}
+main .info_titlee {
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+  padding-top: 50px;
+}
+main .info_title {
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+}
+main .info_item_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  padding-top: 30px;
+  padding-left: 16px;
+  transition: 0.3 linear;
+}
+main .info_item_suptitle {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  padding-left: 16px;
+  padding-top: 10px;
+  transition: 0.3s linear;
+}
+main .info_wrapper {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+main .info_content {
+  width: 659px;
+  height: 181px;
+  background: rgb(201, 155, 103);
+  margin-top: 100px;
+}
+main .info_text {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding-top: 40px;
+  padding-left: 20px;
+}
+main .info_test {
+  font-family: Roboto;
+  color: white;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: 0px;
+  text-align: left;
+  padding-top: 14px;
+  padding-left: 20px;
+}
+main .spann {
+  color: black;
+  cursor: pointer;
+}
+main .info_btn {
+  margin-top: 20px;
+  margin-left: 484.82px;
+  width: 174.93px;
+  height: 51px;
+  border-radius: 100px;
+  border: none;
+  background: rgb(10, 119, 95);
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.our {
+  width: 100%;
+  height: 740px;
+  display: flex;
+  align-items: center;
+  background: url(./../images/our_fon.png) no-repeat;
+  background-size: cover;
+}
+
+.our_suptitlee {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  padding-top: 24px;
+}
+
+.quality {
+  width: 100%;
+  height: 510px;
+  background: url(../images/item_fon.png);
+  margin-top: 120px;
+}
+
+.quality_left_right {
+  display: flex;
+  justify-content: space-between;
+}
+
+.quality_title {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 59px;
+  padding-top: 100px;
+}
+
+.quality_suptitle {
+  width: 639px;
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  padding-top: 24px;
+}
+
+.quality_right {
+  position: relative;
+  right: 560px;
+}
+
+.quality_img {
+  position: absolute;
+  top: -80px;
+}
+
+.quartest {
+  width: 100%;
+  height: 685px;
+  background: url(../images/works_fon.png);
+}
+
+.quartest_item {
+  display: flex;
+  gap: 20px;
+  margin-top: 80px;
+}
+
+.quartest_item_list {
+  width: 433px;
+  height: 396px;
+  background: rgb(248, 248, 242);
+}
+
+.quartest_title {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.quartest_icon {
+  padding-left: 258px;
+  padding-top: 45px;
+}
+
+.quartest_item_title {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 47px;
+  padding-left: 20px;
+  margin-top: -40px;
+}
+
+.quartest_item_info {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+.quartest_item_titlee {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 47px;
+  padding-left: 20px;
+  margin-top: 30px;
+}
+
+.quartest_item_titleee {
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 47px;
+  padding-left: 20px;
+  margin-top: 40px;
 }/*# sourceMappingURL=main.css.map */
