--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,19 +1,21 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
+
 .container{
     max-width: 1340px;
     width: 100%;
     margin: 0 auto;
 }
-ul li{
+
+ol ,ul {
     list-style: none;
 }
-li a{
-    text-decoration: none;
+ li a{
+ text-decoration: none; 
 }
-.active{
+ .active{
     font-weight: bold;
-}
+ }
