--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,136 @@
-@import "./global";
 @import "./fonts";
-@import "./normalize";
+@import "./global";
+@import "./nurmalize";
 @import "./blocks/blocks";
+
+.our {
+    width: 100%;
+    height: 740px;
+    display: flex;
+    align-items: center;
+    background: url(./../images/our_fon.png) no-repeat;
+    background-size: cover;
+}
+
+.our_suptitlee {
+    color: rgb(51, 51, 51);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+}
+
+.quality {
+    width: 100%;
+    height: 510px;
+    background: url(../images/item_fon.png);
+    margin-top: 120px;
+
+}
+
+.quality_left_right {
+    display: flex;
+    justify-content: space-between;
+}
+
+.quality_title {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 59px;
+    padding-top: 100px;
+}
+
+.quality_suptitle {
+    width: 639px;
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+}
+
+.quality_right {
+    position: relative;
+    right: 560px;
+
+}
+
+.quality_img {
+    position: absolute;
+    top: -80px;
+}
+
+.quartest {
+    width: 100%;
+    height: 685px;
+    background: url(../images/works_fon.png);
+}
+
+.quartest_item {
+    display: flex;
+    gap: 20px;
+    margin-top: 80px;
+}
+
+.quartest_item_list {
+    width: 433px;
+    height: 396px;
+    background: rgb(248, 248, 242);
+
+}
+
+.quartest_title {
+    color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.quartest_icon {
+    padding-left: 258px;
+    padding-top: 45px;
+}
+
+.quartest_item_title {
+    color: rgb(51, 51, 51);
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 47px;
+    padding-left: 20px;
+    margin-top: -40px;
+}
+
+.quartest_item_info {
+    color: rgb(51, 51, 51);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+.quartest_item_titlee{
+    color: rgb(51, 51, 51);
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 47px;
+    padding-left: 20px;
+    margin-top: 30px;
+}
+.quartest_item_titleee{
+    color: rgb(51, 51, 51);
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 47px;
+    padding-left: 20px;
+    margin-top: 40px;
+}
